adding encoding to node.modules

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^18.14.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "18.0.11",
+    "encoding": "^0.1.13",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "firebase": "^9.14.0",
